# itchcpp

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FEATURES.md  IMPROVEMENTS.md  LICENSE  README.md  SECURITY.md  conanfile.py  main.cpp  pyproject.toml  vcpkg-configuration.json  vcpkg.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  docs.yml  itch-ci.yml  linux.yml  macos.yml  publish.yml  windows.yml
benchmarks/: CMakeLists.txt  bench_main.cpp  book_bench.cpp  parser_bench.cpp
cmake/: Coverage.cmake  FetchDocsTheme.cmake  Format.cmake  Helpers.cmake  ItchConfig.cmake.in  Sanitize.cmake  Tidy.cmake  Versions.cmake
docs/: DEVELOPER_GUIDE.md  Doxyfile  Doxyfile.in  awesome-head.html  coverage.html
examples/: 01_small.itch  CMakeLists.txt
examples/analytics/: auctions_example.cpp  bars_example.cpp  microstructure_example.cpp  vwap_example.cpp
examples/book/: book_engine_example.cpp
examples/encoder/: encoder_example.cpp
examples/io/: arrow_export_example.cpp  csv_sink_example.cpp
examples/order_book/: main.cpp  order_book_example.cpp
examples/overlay/: overlay_example.cpp
examples/parser/: main.cpp  parser_example.cpp
examples/replay/: replay_example.cpp
examples/transport/: moldudp64_example.cpp  pcap_replay_example.cpp  soupbintcp_example.cpp
examples/utilities/: price_time_indicators_example.cpp
fuzz/: CMakeLists.txt  moldudp64_fuzzer.cpp  parser_fuzzer.cpp
include/: indicators.hpp  itch.hpp  messages.hpp  parser.hpp
include/itch/: encoder.hpp  indicators.hpp  messages.hpp  order_book.hpp  overlay.hpp  parser.hpp  price.hpp  replay.hpp  tape.hpp  time.hpp  venue.hpp
include/itch/analytics/: auctions.hpp  bars.hpp  imbalance.hpp  microstructure.hpp  vwap.hpp
include/itch/book/: book_manager.hpp  l3_book.hpp  order_index.hpp
include/itch/detail/: wire.hpp
include/itch/io/: arrow_export.hpp  csv_sink.hpp  sink.hpp
include/itch/transport/: moldudp64.hpp  pcap.hpp  sequencing.hpp  soupbintcp.hpp
packaging/itch/: portfile.cmake  usage  vcpkg.json
python/: CMakeLists.txt  README.md  pyproject.toml
python/itchcpp/: __init__.py  _bases.py  _itchcpp.pyi  analytics.py  book.py  indicators.py  messages.py  parser.py
python/src/: bindings.cpp
python/tests/: data.py  test_bindings.py  test_parity.py
scripts/: fetch_sample.sh
src/: CMakeLists.txt  encoder.cpp  messages.cpp  order_book.cpp  parser.cpp  replay.cpp
src/book/: book_manager.cpp  l3_book.cpp
src/cmake/: ItchConfig.cmake.in
src/io/: arrow_export.cpp  csv_sink.cpp
src/parser/: CMakeLists.txt  parser.cpp
src/transport/: moldudp64.cpp  pcap.cpp  soupbintcp.cpp
tests/: CMakeLists.txt  test_conformance.cpp  test_encoder.cpp  test_messages.cpp  test_order_book.cpp  test_order_book_extra.cpp  test_parser.cpp  test_parser_edge.cpp  test_price_time.cpp
tests/analytics/: test_analytics.cpp
tests/book/: test_book.cpp  test_overlay.cpp
tests/io/: test_csv_sink.cpp
tests/transport/: frame_builders.hpp  test_transport.cpp
tools/itch_tool/: CMakeLists.txt  main.cpp
vcpkg/itch/: portfile.cmake
