# Python packaging for the `itchcpp` wheel.

[build-system]
requires = ["scikit-build-core>=0.8", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "itchcpp"
dynamic = ["version"]
description = "Native C++ NASDAQ TotalView-ITCH 5.0 parser, book engine, and analytics: a fast, drop-in backend for the pure-Python `itch` (itchfeed) package."
readme = "python/README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Bertin Balouki Simyeli" }]
keywords = ["nasdaq", "itch", "market-data", "order-book", "hft"]
classifiers = [
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/bbalouki/itchcpp"
Documentation = "https://bbalouki.github.io/itchcpp/"

[tool.scikit-build]
cmake.source-dir = "."
cmake.args = ["-DITCH_BUILD_PYTHON=ON", "-DITCH_CXX_STANDARD=20"]
cmake.define = { "CMAKE_VS_GLOBALS" = "IgnoreWarnIntDirInTempDetected=true" }
wheel.packages = ["python/itchcpp"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION.txt"
regex = "(?P<value>.+)"

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"
skip = "*-win32 *_i686 *-musllinux_*"
build-frontend = "build"

manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
test-requires = "pytest"
test-command = "pytest {project}/python/tests"

[tool.cibuildwheel.linux]
# manylinux_2_28's default gcc-toolset-12 doesn't ship <format> at all (GCC
# only added std::format support in GCC 13), which the core library needs.
before-all = "yum install -y gcc-toolset-13"

[tool.cibuildwheel.linux.environment]
CC = "/opt/rh/gcc-toolset-13/root/usr/bin/gcc"
CXX = "/opt/rh/gcc-toolset-13/root/usr/bin/g++"

[tool.cibuildwheel.macos.environment]
# C++20 with libc++ needs a recent deployment target.
MACOSX_DEPLOYMENT_TARGET = "11.0"
